--- a/game/cells/_1_4_.html
+++ b/game/cells/_1_4_.html
@@ -15,7 +15,8 @@
 
     <body style="text-align: center;">
 	<div id="metaButtonsDivision"></div>
-	<p>Some text</p>
+	<p>You are very close to a black hole.
+	You should probably run away NOW.</p>
 	<div id="navigationButtonsDivision"></div>
     </body>
 
