--- a/game/cells/_13_6_.html
+++ b/game/cells/_13_6_.html
@@ -1,22 +1,53 @@
 <!doctype html>
 <html lang="en">
     <head>
-	<meta charset="utf-8">
-	<meta name="author" content="Pedro Núñez">
-	<link href="../styles.css" rel="stylesheet">
-	<script src="../scripts/jquery-3.5.1.min.js"></script>
-	<script>
-	    jQuery(function(){
-		jQuery("#metaButtonsDivision").load("../metaButtons.html");
-		jQuery("#navigationButtonsDivision").load("../navigationButtons.html");
-	    });
-	</script>
+    <link href="../styles.css" rel="stylesheet">
+    <script src="../scripts/jquery-3.5.1.min.js"></script>
+    <script>
+	jQuery(function(){
+	    jQuery("#metaButtonsDivision").load("../metaButtons.html");
+	    jQuery("#navigationButtonsDivision").load("../navigationButtons.html");
+	});
+    </script>
     </head>
 
     <body style="text-align: center;">
-	<div id="metaButtonsDivision"></div>
-	<p>Some text</p>
-	<div id="navigationButtonsDivision"></div>
+    <div id="metaButtonsDivision"></div>
+    <h3>You are at an abandoned base camp.</h3>
+    <p>Looks like you are not the first group of explorers to travel through these lands.</br>
+    Everything looks as if they had left suddenly and without much planning.</br>
+    In fact, there is a laptop on a nearby table...
+    <button data-modal-target="#laptopNW">Open laptop</button>
+    <div class="modal" id="laptopNW">
+	<div class="modal-body">
+	    <p>An e-mail is on display in the screen:</p>
+
+	    <p>Dear fellow explorers,</br>
+	    </br>
+	    Where are you? We haven't heard from you in a long time. You suddenly stopped answering our e-mails and calls.
+	    We are not even sure if you will ever read this e-mail,  but we felt like we should at least try to communicate our decision to you.</br>
+	    </br>
+	    If you have read our previous e-mails, you will understand our frustration and why we decided to give up and go back home.
+	    The locals were watching us from the beginning of our exploration and they seem to have gotten to the conclusion that we don't know each other well enough to be trust-wrothy as a group.
+	    If you have read our previous e-mails you will also know that the last piece of land that remains to be explored lies behind an old gate, surrounded by mountains.
+	    This location seems to be very important for the locals.
+	    We suspect that an old city got destroyed by a black hole in that location, but we couldn't confirm this because they do not allow us to enter the location.
+	    They keep asking us to prove them wrong and show them that we know each other well in various ways...
+	    Since we couldn't contact you anymore, it became impossible to answer any of their questions and we eventually decided to give up and go back home.</br>
+	    </br>
+	    We have searched all the base camps looking for you before leaving, but you were nowhere to be seen.
+	    We hope that you are okay wherever you are and that we can see each other in person once more some day.</br>
+	    </br>
+	    All the best,</br>
+	    your fellow explorers.</p>
+	</div>
+    </div>
+    <div id="overlay"></div></p>
+    <div id="navigationButtonsDivision"></div>
+    <p>There is a hellicopter next to this abandoned base camp.</br></p>
+    <button onclick="window.location.href = &quot_0_0_.html&quot">Fly back to the base camp</button>
+    <p>Make sure you remember the current location:</br>
+    <strong>-3.817, 4.027</strong></p>
     </body>
 
 </html>
