--- a/game/cells/_14_13_.html
+++ b/game/cells/_14_13_.html
@@ -11,13 +11,20 @@
 		jQuery("#navigationButtonsDivision").load("../navigationButtons.html");
 	    });
 	</script>
+	<script src="../scripts/hellicopterButtons.js"></script>
     </head>
 
     <body style="text-align: center;">
 	<div id="metaButtonsDivision"></div>
-	<p>You are very close to a black hole.
-	You should probably run away NOW.</p>
+	<h3>You are at an abandoned base camp.</h3>
+	<p>Looks like you are not the first group of explorers to travel through these lands.
+	Everything looks as if they had left suddenly and without much planning.
+	In fact, there is a laptop on a nearby table...</p>
+	<!--TODO add button "open laptop"-->
 	<div id="navigationButtonsDivision"></div>
+	<p>There is a hellicopter next to this abandoned base camp.
+	The tank seems to be full, so you can use it to fly back and forth from your original base camp.</p>
+	<button id="fromSouthWestToBaseCamp" onclick="fromSouthWestToBaseCamp()">Fly back to the base camp</button>
     </body>
 
 </html>
