--- a/game/cells/_4_13_.html
+++ b/game/cells/_4_13_.html
@@ -1,22 +1,56 @@
 <!doctype html>
 <html lang="en">
     <head>
-	<meta charset="utf-8">
-	<meta name="author" content="Pedro Núñez">
-	<link href="../styles.css" rel="stylesheet">
-	<script src="../scripts/jquery-3.5.1.min.js"></script>
-	<script>
-	    jQuery(function(){
-		jQuery("#metaButtonsDivision").load("../metaButtons.html");
-		jQuery("#navigationButtonsDivision").load("../navigationButtons.html");
-	    });
-	</script>
+    <link href="../styles.css" rel="stylesheet">
+    <script src="../scripts/jquery-3.5.1.min.js"></script>
+    <script>
+	jQuery(function(){
+	    jQuery("#metaButtonsDivision").load("../metaButtons.html");
+	    jQuery("#navigationButtonsDivision").load("../navigationButtons.html");
+	});
+    </script>
     </head>
 
     <body style="text-align: center;">
-	<div id="metaButtonsDivision"></div>
-	<p>Some text</p>
-	<div id="navigationButtonsDivision"></div>
+    <div id="metaButtonsDivision"></div>
+    <h3>You are at an abandoned base camp.</h3>
+    <p>Looks like you are not the first group of explorers to travel through these lands.</br>
+    Everything looks as if they had left suddenly and without much planning.</br>
+    In fact, there is a laptop on a nearby table...
+    <button data-modal-target="#laptopNW">Open laptop</button>
+    <div class="modal" id="laptopNW">
+	<div class="modal-body">
+	    <p>The browser is open and it is currently showing the html source code of some page:</p>
+	    <pre><code>
+&lt!doctype html&gt
+&lthtml lang="en"&gt
+    &lthead&gt
+    &ltlink href="../styles.css" rel="stylesheet"&gt
+    &ltscript src="../scripts/jquery-3.5.1.min.js"&gt&lt/script&gt
+    &ltscript&gt
+	jQuery(function(){
+	    jQuery("#metaButtonsDivision").load("../metaButtons.html");
+	    jQuery("#navigationButtonsDivision").load("../navigationButtons.html");
+	});
+    &lt/script&gt
+    &lt/head&gt
+
+    &ltbody style="text-align: center;"&gt
+    &ltdiv id="metaButtonsDivision"&gt&lt/div&gt
+    &lth3>You are at an abandoned base camp.&lt/h3&gt
+    &ltp>Looks like you are not the first group of explorers to travel through these lands.&lt/br&gt
+    Everything looks as if they had left suddenly and without much planning.&lt/br&gt
+    In fact, there is a laptop on a nearby table...&lt/p&gt
+	    </code></pre>
+	    It seems to be impossible to continue reading, the screen is completely burnt below the last line of visible code and both keyboard and mousepad are not reacting.
+	</div>
+    </div>
+    <div id="overlay"></div></p>
+    <div id="navigationButtonsDivision"></div>
+    <p>There is a hellicopter next to this abandoned base camp.</br></p>
+    <button onclick="window.location.href = &quot_0_0_.html&quot">Fly back to the base camp</button>
+    <p>Make sure you remember the current location:</br>
+    <strong>-4.352, -4.119</strong></p>
     </body>
 
 </html>
