--- a/game/cells/_7_11_.html
+++ b/game/cells/_7_11_.html
@@ -1,22 +1,26 @@
 <!doctype html>
 <html lang="en">
     <head>
-	<meta charset="utf-8">
-	<meta name="author" content="Pedro Núñez">
-	<link href="../styles.css" rel="stylesheet">
-	<script src="../scripts/jquery-3.5.1.min.js"></script>
-	<script>
-	    jQuery(function(){
-		jQuery("#metaButtonsDivision").load("../metaButtons.html");
-		jQuery("#navigationButtonsDivision").load("../navigationButtons.html");
-	    });
-	</script>
+    <link href="../styles.css" rel="stylesheet">
+    <script src="../scripts/jquery-3.5.1.min.js"></script>
+    <script>
+	jQuery(function(){
+	    jQuery("#metaButtonsDivision").load("../metaButtons.html");
+	    jQuery("#navigationButtonsDivision").load("../navigationButtons.html");
+	});
+    </script>
     </head>
 
     <body style="text-align: center;">
-	<div id="metaButtonsDivision"></div>
-	<p>Some text</p>
-	<div id="navigationButtonsDivision"></div>
+    <div id="metaButtonsDivision"></div>
+    <h3>You are at an abandoned base camp.</h3>
+    <p>Looks like you are not the first group of explorers to travel through these lands.</br>
+    The abandoned base camp has been cleaned and tidied up, and no valuable objects have been left behind.</p>
+    <div id="navigationButtonsDivision"></div>
+    <p>If you came here with the hellicopter, then you may
+    <button onclick="window.location.href = &quot_0_0_.html&quot">fly back to the base camp.</button></p>
+    <p>Make sure you remember the current location:</br>
+    <strong>5.822, -5.763</strong></p>
     </body>
 
 </html>
