--- a/game/cells/_2_2_.html
+++ b/game/cells/_2_2_.html
@@ -14,7 +14,8 @@
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
-    <p>You see a nice landscape, but no particular geographic detail catches the eye.</p>
+    <p>You are inside a lake.
+    You should probably swim back to shore.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
 
