corrected geography columns 1 to 3

--- a/game/cells/_2_15_.html
+++ b/game/cells/_2_15_.html
@@ -14,7 +14,7 @@
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
-    <p>You see a mountain to the northwest.</p>
+    <p>You see mountains to the northwest and far away to the west.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
 
