--- a/game/cells/_2_14_.html
+++ b/game/cells/_2_14_.html
@@ -14,7 +14,8 @@
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
-    <p>You are near the shore of a lake that extends to the south and to the east.</p>
+    <p>You are near the shore of a lake that extends to the south and to the east.</br>
+    You see a mountain far away to the west.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
 
