geography columns up to 4

--- a/game/cells/_4_13_.html
+++ b/game/cells/_4_13_.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
     <head>
     <link href="../styles.css" rel="stylesheet">
     <script src="../scripts/jquery-3.5.1.min.js"></script>
@@ -24,6 +25,7 @@
 	    <pre><code>
 &lt!doctype html&gt
 &lthtml lang="en"&gt
+
     &lthead&gt
     &ltlink href="../styles.css" rel="stylesheet"&gt
     &ltscript src="../scripts/jquery-3.5.1.min.js"&gt&lt/script&gt
@@ -46,6 +48,7 @@
 	</div>
     </div>
     <div id="overlay"></div></p>
+    <p>You see mountains to the west and to the south.</p>
     <div id="navigationButtonsDivision"></div>
     <p>There is a hellicopter next to this abandoned base camp.</br></p>
     <button onclick="window.location.href = &quot_0_0_.html&quot">Fly back to the base camp</button>
