geography up to column 9

--- a/game/cells/_7_11_.html
+++ b/game/cells/_7_11_.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
     <head>
     <link href="../styles.css" rel="stylesheet">
     <script src="../scripts/jquery-3.5.1.min.js"></script>
@@ -16,6 +17,7 @@
     <h3>You are at an abandoned base camp.</h3>
     <p>Looks like you are not the first group of explorers to travel through these lands.</br>
     The abandoned base camp has been cleaned and tidied up, and no valuable objects have been left behind.</p>
+    <p>You see mountains far away to the west and far away to the east.</p>
     <div id="navigationButtonsDivision"></div>
     <p>If you came here with the hellicopter, then you may
     <button onclick="window.location.href = &quot_0_0_.html&quot">fly back to the base camp.</button></p>
