--- a/game/cells/_5_4_.html
+++ b/game/cells/_5_4_.html
@@ -1,30 +1,21 @@
 <!doctype html>
 <html lang="en">
+
     <head>
-	<meta charset="utf-8">
-	<meta name="author" content="Pedro Núñez">
-	<link href="../styles.css" rel="stylesheet">
-	<script src="../scripts/jquery-3.5.1.min.js"></script>
-	<script>
-	    jQuery(function(){
-		jQuery("#metaButtonsDivision").load("../metaButtons.html");
-		jQuery("#navigationButtonsDivision").load("../navigationButtons.html");
-	    });
-	</script>
-	<script src="../scripts/hellicopterButtons.js"></script>
+    <link href="../styles.css" rel="stylesheet">
+    <script src="../scripts/jquery-3.5.1.min.js"></script>
+    <script>
+	jQuery(function(){
+	    jQuery("#metaButtonsDivision").load("../metaButtons.html");
+	    jQuery("#navigationButtonsDivision").load("../navigationButtons.html");
+	});
+    </script>
     </head>
 
     <body style="text-align: center;">
-	<div id="metaButtonsDivision"></div>
-	<h3>You are at an abandoned base camp.</h3>
-	<p>Looks like you are not the first group of explorers to travel through these lands.
-	Everything looks as if they had left suddenly and without much planning.
-	In fact, there is a laptop on a nearby table...</p>
-	<!--TODO add button "open laptop"-->
-	<div id="navigationButtonsDivision"></div>
-	<p>There is a hellicopter next to this abandoned base camp.
-	The tank seems to be full, so you can use it to fly back and forth from your original base camp.</p>
-	<button id="fromNorthEastToBaseCamp" onclick="fromNorthEastToBaseCamp()">Fly back to the base camp</button>
+    <div id="metaButtonsDivision"></div>
+    <p>You see a nice landscape, but no particular geographic detail catches the eye.</p>
+    <div id="navigationButtonsDivision"></div>
     </body>
 
 </html>
