--- a/game/cells/_12_13_.html
+++ b/game/cells/_12_13_.html
@@ -1,22 +1,21 @@
 <!doctype html>
 <html lang="en">
+
     <head>
-	<meta charset="utf-8">
-	<meta name="author" content="Pedro Núñez">
-	<link href="../styles.css" rel="stylesheet">
-	<script src="../scripts/jquery-3.5.1.min.js"></script>
-	<script>
-	    jQuery(function(){
-		jQuery("#metaButtonsDivision").load("../metaButtons.html");
-		jQuery("#navigationButtonsDivision").load("../navigationButtons.html");
-	    });
-	</script>
+    <link href="../styles.css" rel="stylesheet">
+    <script src="../scripts/jquery-3.5.1.min.js"></script>
+    <script>
+	jQuery(function(){
+	    jQuery("#metaButtonsDivision").load("../metaButtons.html");
+	    jQuery("#navigationButtonsDivision").load("../navigationButtons.html");
+	});
+    </script>
     </head>
 
     <body style="text-align: center;">
-	<div id="metaButtonsDivision"></div>
-	<p>Some text</p>
-	<div id="navigationButtonsDivision"></div>
+    <div id="metaButtonsDivision"></div>
+    <p>You see mountains to the southwest and far away to the west.</p>
+    <div id="navigationButtonsDivision"></div>
     </body>
 
 </html>
