--- a/game/cells/_13_6_.html
+++ b/game/cells/_13_6_.html
@@ -44,6 +44,7 @@
 	</div>
     </div>
     <div id="overlay"></div></p>
+    <p>You see a mountain to the southeast.</p>
     <div id="navigationButtonsDivision"></div>
     <p>There is a hellicopter next to this abandoned base camp.</br></p>
     <button onclick="window.location.href = &quot_0_0_.html&quot">Fly back to the base camp</button>
