finished first three theorems

--- a/game/cells/_13_6_.html
+++ b/game/cells/_13_6_.html
@@ -18,11 +18,13 @@
     <p>Looks like you are not the first group of explorers to travel through these lands.</br>
     Everything looks as if they had left suddenly and without much planning.</br>
     In fact, there is a laptop on a nearby table...
-    <button data-modal-target="#laptopNW">Open laptop</button>
-    <div class="modal" id="laptopNW">
+    <button data-modal-target="#laptopSE">Open laptop</button>
+    <div class="modal" id="laptopSE">
+	<div class="modal-header">
+	    <div>You see an email:</div>
+	    <button data-close-button class="close-button">&times;</button>
+	</div>
 	<div class="modal-body">
-	    <p>An e-mail is on display in the screen:</p>
-
 	    <p>Dear fellow explorers,</br>
 	    </br>
 	    Where are you? We haven't heard from you in a long time. You suddenly stopped answering our e-mails and calls.
@@ -47,7 +49,7 @@
     <p>You see a mountain to the southeast.</p>
     <div id="navigationButtonsDivision"></div>
     <p>There is a hellicopter next to this abandoned base camp.</br></p>
-    <button onclick="window.location.href = &quot_0_0_.html&quot">Fly back to the base camp</button>
+    <button onclick="window.location.href = &quot_1_1_.html&quot">Fly back to the base camp</button>
     <p>Make sure you remember the current location:</br>
     <strong>-3.817, 4.027</strong></p>
     </body>
