--- a/game/cells/_4_13_.html
+++ b/game/cells/_4_13_.html
@@ -18,10 +18,13 @@
     <p>Looks like you are not the first group of explorers to travel through these lands.</br>
     Everything looks as if they had left suddenly and without much planning.</br>
     In fact, there is a laptop on a nearby table...
-    <button data-modal-target="#laptopNW">Open laptop</button>
-    <div class="modal" id="laptopNW">
+    <button data-modal-target="#laptopSW">Open laptop</button>
+    <div class="modal" id="laptopSW">
+	<div class="modal-header">
+	    <div>You see some html source code:</div>
+	    <button data-close-button class="close-button">&times;</button>
+	</div>
 	<div class="modal-body">
-	    <p>The browser is open and it is currently showing the html source code of some page:</p>
 	    <pre><code>
 &lt!doctype html&gt
 &lthtml lang="en"&gt
@@ -44,14 +47,13 @@
     Everything looks as if they had left suddenly and without much planning.&lt/br&gt
     In fact, there is a laptop on a nearby table...&lt/p&gt
 	    </code></pre>
-	    It seems to be impossible to continue reading, the screen is completely burnt below the last line of visible code and both keyboard and mousepad are not reacting.
 	</div>
     </div>
     <div id="overlay"></div></p>
     <p>You see mountains to the west and to the south.</p>
     <div id="navigationButtonsDivision"></div>
     <p>There is a hellicopter next to this abandoned base camp.</br></p>
-    <button onclick="window.location.href = &quot_0_0_.html&quot">Fly back to the base camp</button>
+    <button onclick="window.location.href = &quot_1_1_.html&quot">Fly back to the base camp</button>
     <p>Make sure you remember the current location:</br>
     <strong>-4.352, -4.119</strong></p>
     </body>
