finished 30 history questions

--- a/game/cells/_10_13_.html
+++ b/game/cells/_10_13_.html
@@ -14,7 +14,8 @@
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
-    <p>You see a mountain far away to the east.</p>
+    <p>You are near the shore of a lake that extends to the south.</br>
+    You see a mountain far away to the east.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
 
