--- a/game/cells/_10_16_.html
+++ b/game/cells/_10_16_.html
@@ -14,7 +14,7 @@
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
-    <p>You are near the shore of a lake that extends to the west.</br>
+    <p>You are near the shore of a lake that extends to the west and to the north.</br>
     You see a mountain far away to the east.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
