--- a/game/cells/_13_14_.html
+++ b/game/cells/_13_14_.html
@@ -14,7 +14,8 @@
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
-    <p>You see mountains to the northeast, to the east and to the southeast.</p>
+    <p>You are near the shore of a lake that extends to the west.</br>
+    You see mountains to the northeast, to the east and to the southeast.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
 
