--- a/game/cells/_13_10_.html
+++ b/game/cells/_13_10_.html
@@ -14,7 +14,38 @@
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
-    <p>You see mountains to the northeast, to the east and to the southeast.</p>
+    <div id="encounter">
+    <p>An old man approaches you:</br>
+    &quotSo you come from Freiburg, you say?</br>
+    What did the pioneer of women's studies, Johanna Kappes, study in Freiburg?&quot</p>
+    <select id="answer" style="margin: 10px;">
+		<option value="none" selected disabled hidden>
+		Choose an answer</option>
+		<option value="incorrect">Economics</option>
+		<option value="correct">Medicine</option>
+		<option value="incorrect">Law</option>
+    </select>
+    <div style="margin: 10px;">
+    	<button id="check" onclick="checkAnswer()">Confirm answer</button>
+    	<script>
+    		var attempts = 0;
+    		function checkAnswer() {
+    			if (document.getElementById("answer").value == "correct") {
+    				alert("Correct! The old path that you are looking for used to pass by here, yes.\nBy the way, did you know about the previous group of explorers? I think they used to have a base camp somewhere north from here.");
+    				document.getElementById("encounter").style.display = "none";
+    			} else if (attempts == 0) {
+    				attempts +=1;
+    				alert("Incorrect. But okay, we all have memory slips now and then. Would you like to try again?")
+    			} else {
+    				alert("Still incorrect... Sorry, I gotta go now.");
+    				document.getElementById("encounter").style.display = "none";
+    			}
+    		}
+    	</script>
+    </div>
+    </div>
+    <p>You are near the shore of a lake that extends to the west.</br>
+    You see mountains to the northeast, to the east and to the southeast.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
 
