--- a/game/cells/_6_5_.html
+++ b/game/cells/_6_5_.html
@@ -5,15 +5,45 @@
     <link href="../styles.css" rel="stylesheet">
     <script src="../scripts/jquery-3.5.1.min.js"></script>
     <script>
-	jQuery(function(){
-	    jQuery("#metaButtonsDivision").load("../metaButtons.html");
-	    jQuery("#navigationButtonsDivision").load("../navigationButtons.html");
-	});
+		jQuery(function(){
+	    	jQuery("#metaButtonsDivision").load("../metaButtons.html");
+	    	jQuery("#navigationButtonsDivision").load("../navigationButtons.html");
+		});
     </script>
     </head>
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
+    <div id="encounter">
+    <p>An old man approaches you:</br>
+    &quotSo you come from Freiburg, you say?</br>
+    What type of rock is the Freiburg Münster made of?&quot</p>
+    <select id="answer" style="margin: 10px;">
+		<option value="none" selected disabled hidden>
+		Choose an answer</option>
+		<option value="marble">Marble</option>
+		<option value="granite">Granite</option>
+		<option value="redSandstone">Red sandstone</option>
+    </select>
+    <div style="margin: 10px;">
+    	<button id="check" onclick="checkAnswer()">Confirm answer</button>
+    	<script>
+    		var attempts = 0;
+    		function checkAnswer() {
+    			if (document.getElementById("answer").value == "redSandstone") {
+    				alert("Correct! The old path that you are looking for used to pass by here, yes.\nBy the way, did you know about the previous group of explorers? I think they used to have a base camp somewhere southwest from here.");
+    				document.getElementById("encounter").style.display = "none";
+    			} else if (attempts == 0) {
+    				attempts +=1;
+    				alert("Incorrect. But okay, we all have memory slips now and then. Would you like to try again?")
+    			} else {
+    				alert("Still incorrect... Sorry, I gotta go now.");
+    				document.getElementById("encounter").style.display = "none";
+    			}
+    		}
+    	</script>
+    </div>
+    </div>
     <p>You see a nice landscape, but no particular geographic detail catches the eye.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
