--- a/game/cells/_11_1_.html
+++ b/game/cells/_11_1_.html
@@ -10,10 +10,37 @@
 	    jQuery("#navigationButtonsDivision").load("../navigationButtons.html");
 	});
     </script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     </head>
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
+    <div id="encounter">
+    <p>You meet a scientist who decides to test you before sharing information with you.</br>
+    &quot;In which layer of the atmosphere are we?&quot;</p>
+    <select id="answer" style="margin: 10px;">
+		<option value="none" selected disabled hidden>
+		Choose an answer</option>
+		<option value="correct">Troposphere</option>
+		<option value="incorrect">Thermosphere</option>
+		<option value="incorrect">Mesosphere</option>
+    </select>
+    <div style="margin: 10px;">
+    	<button id="check" onclick="checkAnswer()">Confirm answer</button>
+    	<script>
+    		function checkAnswer() {
+    			if (document.getElementById("answer").value == "correct") {
+    				alert("Correct! The old path that you are looking for did not pass by here, no.\nHave you heard about the black holes around here? I have been studying one of them recently, it is somewhere northwest from here.");
+    				document.getElementById("encounter").style.display = "none";
+    			} else {
+    				alert("Incorrect... Sorry, I gotta go back to the lab now.");
+    				document.getElementById("encounter").style.display = "none";
+    			}
+    		}
+    	</script>
+    </div>
+    </div>
     <p>You see mountains to the south, to the northwest, to the northeast, to the east and far away to the west.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
