--- a/game/cells/_13_14_.html
+++ b/game/cells/_13_14_.html
@@ -10,10 +10,36 @@
 	    jQuery("#navigationButtonsDivision").load("../navigationButtons.html");
 	});
     </script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     </head>
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
+    <div id="encounter">
+    <p>How large is Jupiter's Red Spot?&quot;</p>
+    <select id="answer" style="margin: 10px;">
+		<option value="none" selected disabled hidden>
+		Choose an answer</option>
+		<option value="incorrect">Smaller than the Earth</option>
+		<option value="correct">Approximately as large as three Earths</option>
+		<option value="incorrect">Bigger than five Earths</option>
+    </select>
+    <div style="margin: 10px;">
+    	<button id="check" onclick="checkAnswer()">Confirm answer</button>
+    	<script>
+    		function checkAnswer() {
+    			if (document.getElementById("answer").value == "correct") {
+    				alert("Correct! The old path that you are looking for used to pass by here, yes.\nHave you heard about the black holes around here? I have been studying one of them recently, it is somewhere northeast from here.");
+    				document.getElementById("encounter").style.display = "none";
+    			} else {
+    				alert("Incorrect... Sorry, I gotta go back to the lab now.");
+    				document.getElementById("encounter").style.display = "none";
+    			}
+    		}
+    	</script>
+    </div>
+    </div>
     <p>You are near the shore of a lake that extends to the west.</br>
     You see mountains to the northeast, to the east and to the southeast.</p>
     <div id="navigationButtonsDivision"></div>
