--- a/game/cells/_2_4_.html
+++ b/game/cells/_2_4_.html
@@ -10,10 +10,38 @@
 	    jQuery("#navigationButtonsDivision").load("../navigationButtons.html");
 	});
     </script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     </head>
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
+    <div id="encounter">
+    <p>You meet a scientist who decides to test you before sharing information with you.</br>
+    &quot;One of two twins goes on a trip to space and travels for a couple years at a speed close to the speed of light, then comes back.
+    Will they still be the same age?&quot;</p>
+    <select id="answer" style="margin: 10px;">
+		<option value="none" selected disabled hidden>
+		Choose an answer</option>
+		<option value="incorrect">Yes</option>
+		<option value="correct">No, the twin who remained on Earth will be older now</option>
+		<option value="incorrect">No, the twin who remained on Earth will be younger now</option>
+    </select>
+    <div style="margin: 10px;">
+    	<button id="check" onclick="checkAnswer()">Confirm answer</button>
+    	<script>
+    		function checkAnswer() {
+    			if (document.getElementById("answer").value == "correct") {
+    				alert("Correct! The old path that you are looking for did not pass by here, no.\nHave you heard about the black holes around here? I have been studying one of them recently, it is somewhere northeast from here.");
+    				document.getElementById("encounter").style.display = "none";
+    			} else {
+    				alert("Incorrect... Sorry, I gotta go back to the lab now.");
+    				document.getElementById("encounter").style.display = "none";
+    			}
+    		}
+    	</script>
+    </div>
+    </div>
     <p>You see mountains to the southwest, to the west and to the northwest.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
