corrected couple cells

--- a/game/cells/_13_14_.html
+++ b/game/cells/_13_14_.html
@@ -17,7 +17,8 @@
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
     <div id="encounter">
-    <p>How large is Jupiter's Red Spot?&quot;</p>
+    <p>You meet a scientist who decides to test you before sharing information with you.</br>
+    &quot;How large is Jupiter's Red Spot?&quot;</p>
     <select id="answer" style="margin: 10px;">
 		<option value="none" selected disabled hidden>
 		Choose an answer</option>
