--- a/game/cells/_16_2_.html
+++ b/game/cells/_16_2_.html
@@ -32,7 +32,7 @@
     	<script>
     		function checkAnswer() {
     			if (document.getElementById("answer").value == "correct") {
-    				alert("Correct! The old path that you are looking for used to pass by here, yes.\nHave you heard about the black holes around here? I have been studying one of them recently, it is somewhere southeast from here.");
+    				alert("Correct! The old path that you are looking for used to pass by here, yes.\nHave you heard about the black holes around here? I have been studying one of them recently, it is somewhere west from here.");
     				document.getElementById("encounter").style.display = "none";
     			} else {
     				alert("Incorrect... Sorry, I gotta go back to the lab now.");
