--- a/game/cells/_8_13_.html
+++ b/game/cells/_8_13_.html
@@ -10,10 +10,40 @@
 	    jQuery("#navigationButtonsDivision").load("../navigationButtons.html");
 	});
     </script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     </head>
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
+    <div id="encounter">
+    <p>You meet a fellow mathematician who decides to test you before telling you about the path.</br>
+    &quot;Let \(n\in\mathbb{N}\) be an odd number. Alice writes the numbers \(1,2,\ldots,2n\) on the blackboard.
+    She tells Bob to pick any two numbers among them; Alice will then erase them and replace them by the number \(|a-b|\).
+    The she tells him to repeat the process until there is only one number remaining, and Alice wins if and only if the remaining number is odd.
+    Who would win?&quot;</p>
+    <select id="answer" style="margin: 10px;">
+		<option value="none" selected disabled hidden>
+		Choose an answer</option>
+		<option value="incorrect">Always Bob</option>
+		<option value="incorrect">Bob if and only if \(n-1\) is a multiple of \(4\)</option>
+		<option value="correct">Always Alice</option>
+    </select>
+    <div style="margin: 10px;">
+    	<button id="check" onclick="checkAnswer()">Confirm answer</button>
+    	<script>
+    		function checkAnswer() {
+    			if (document.getElementById("answer").value == "correct") {
+    				alert("Correct! The old path that you are looking for did not pass by here, no.");
+    				document.getElementById("encounter").style.display = "none";
+    			} else {
+    				alert("Incorrect... Sorry, I gotta go back to my blackboard now.");
+    				document.getElementById("encounter").style.display = "none";
+    			}
+    		}
+    	</script>
+    </div>
+    </div>
     <p>You see a mountain to the east.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
