finished up modulo credits

--- a/game/cells/_11_1_.html
+++ b/game/cells/_11_1_.html
@@ -41,7 +41,8 @@
     	</script>
     </div>
     </div>
-    <p>You see mountains to the south, to the northwest, to the northeast, to the east and far away to the west.</p>
+    <p>You see mountains to the south, to the northwest, to the northeast, to the east and far away to the west.
+    A thin column of smoke rises from the western mountain.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
 
