--- a/game/cells/_13_5_.html
+++ b/game/cells/_13_5_.html
@@ -41,7 +41,8 @@
     	</script>
     </div>
     </div>
-    <p>You see mountains to the northwest and to the northeast.</p>
+    <p>You see mountains to the northwest and to the northeast.
+    A thin column of smoke rises from the northeastern mountain.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
 
