--- a/game/cells/_15_1_.html
+++ b/game/cells/_15_1_.html
@@ -14,7 +14,8 @@
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
-    <p>You see mountains to the west, to the north, to the southeast and far away to the east.</p>
+    <p>You see mountains to the west, to the north, to the southeast and far away to the east.
+    A thin column of smoke rises from the western mountain.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
 
