--- a/game/cells/_15_5_.html
+++ b/game/cells/_15_5_.html
@@ -14,7 +14,8 @@
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
-    <p>You see mountains to the northwest, to the east and far away to the north.</p>
+    <p>You see mountains to the northwest, to the east and far away to the north.
+    A thin column of smoke rises from the northwestern mountain.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
 
