--- a/game/cells/_5_1_.html
+++ b/game/cells/_5_1_.html
@@ -14,8 +14,12 @@
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
-    <p>You are on top of a mountain.
-    How did you get here?</p>
+    <h3>You found the missing group of explorers!</h3>
+    <p>&quot;At some point we discovered that we had been inside a computer game the whole time and that we could just enter an appropriate URL to go to any location that we wanted.
+    This made us lose interest in our original exploration goal, but anyway, since travelling became so easy we did finish the exploration, just for the sake of completeness.
+    Look, we also drew a map of the land and the old path that used to traverse it, in case you are interested.&quot;</p>
+    <img src="../images/_5_1_.png" style="width: 500px;"></br>
+    <p>You are on top of a mountain.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
 
