--- a/game/cells/_5_8_.html
+++ b/game/cells/_5_8_.html
@@ -44,7 +44,8 @@
     	</script>
     </div>
     </div>
-    <p>You see a mountain far away to the south.</p>
+    <p>You see a mountain far away to the south.
+    A thin column of smoke rises from the mountain.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
 
