--- a/game/cells/_13_1_.html
+++ b/game/cells/_13_1_.html
@@ -14,7 +14,8 @@
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
-    <p>You see mountains to the west, to the northwest and to the east.</p>
+    <p>You see mountains to the west, to the northwest and to the east.
+    A thin column of smoke rises from the eastern mountain.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
 
