--- a/game/cells/_13_7_.html
+++ b/game/cells/_13_7_.html
@@ -14,7 +14,8 @@
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
-    <p>You see mountains to the southwest, to the west, to the northwest, to the southeast and far away to the east.</p>
+    <p>You see mountains to the southwest, to the west, to the northwest, to the southeast and far away to the east.
+    A thin column of smoke rises from the southeastern mountain.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
 
