--- a/game/cells/_5_15_.html
+++ b/game/cells/_5_15_.html
@@ -14,7 +14,8 @@
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
-    <p>You see mountains to the southeast, far away to the south and far away to the west..</p>
+    <p>You see mountains to the southeast, far away to the south and far away to the west.
+    A thin column of smoke rises from the southern mountain.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
 
