--- a/game/cells/_5_5_.html
+++ b/game/cells/_5_5_.html
@@ -14,7 +14,8 @@
 
     <body style="text-align: center;">
     <div id="metaButtonsDivision"></div>
-    <p>You see mountains to the north and far away to the east.</p>
+    <p>You see mountains to the north and far away to the east.
+    A thin column of smoke rises from the northern mountain.</p>
     <div id="navigationButtonsDivision"></div>
     </body>
 
